kubernetes/apps/erin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erin
  namespace: erin
spec:
  selector:
    app: erin
  ports:
    - port: 80
      targetPort: 80
